[gd_scene load_steps=15 format=3 uid="uid://dxjr13t76wfnf"]

[ext_resource type="Script" path="res://assets/scripts/PlayerScript.gd" id="1_1pc83"]
[ext_resource type="Texture2D" uid="uid://buaa71uxcity1" path="res://assets/textures/player/body/cat_body_tail1.png" id="2_aumf3"]
[ext_resource type="Texture2D" uid="uid://xfn1y0co67wq" path="res://assets/textures/player/body/cat_body_tail2.png" id="3_m222n"]
[ext_resource type="Texture2D" uid="uid://dgb1viqujax0t" path="res://assets/textures/player/body/cat_body_tail3.png" id="4_wxvop"]
[ext_resource type="Texture2D" uid="uid://d2jf8pc7p5fxu" path="res://assets/textures/player/body/cat_body_tail4.png" id="5_b3ej4"]
[ext_resource type="Texture2D" uid="uid://docdhb2rsfjot" path="res://assets/textures/player/body/cat_body_tail5.png" id="6_1v4bh"]
[ext_resource type="Texture2D" uid="uid://bgkuspcd4iflp" path="res://assets/textures/player/head/cat_closed.png" id="7_sgcdf"]
[ext_resource type="Texture2D" uid="uid://c172mpxcwlj1b" path="res://assets/textures/player/head/cat_open.png" id="8_3u3i0"]
[ext_resource type="Texture2D" uid="uid://dw56jug6iitpy" path="res://assets/textures/player/Basis/Basis.png" id="9_xxyyo"]
[ext_resource type="AudioStream" uid="uid://62vqdj8mnu8n" path="res://assets/audio/Sound/Damage.wav" id="10_kr3yk"]
[ext_resource type="AudioStream" uid="uid://it3ppjsiff4c" path="res://assets/audio/Sound/bite.wav" id="11_vtfjj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1yseq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_aumf3")
}, {
"duration": 1.0,
"texture": ExtResource("3_m222n")
}, {
"duration": 1.0,
"texture": ExtResource("4_wxvop")
}, {
"duration": 1.0,
"texture": ExtResource("5_b3ej4")
}, {
"duration": 1.0,
"texture": ExtResource("6_1v4bh")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jcrcq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_sgcdf")
}, {
"duration": 1.0,
"texture": ExtResource("8_3u3i0")
}],
"loop": false,
"name": &"Bite",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_sgcdf")
}],
"loop": false,
"name": &"Idle",
"speed": 1.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pjv5u"]
radius = 132.0
height = 364.0

[node name="Player" type="Node2D"]

[node name="PlayerArea2D" type="Area2D" parent="." groups=["player"]]
script = ExtResource("1_1pc83")
Speed = 350
HealthPoints = 100
hunger_decrease_rate = 3
threshold = 7

[node name="Body" type="AnimatedSprite2D" parent="PlayerArea2D"]
unique_name_in_owner = true
scale = Vector2(30, 30)
sprite_frames = SubResource("SpriteFrames_1yseq")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.443001
offset = Vector2(6, 0)

[node name="Head" type="AnimatedSprite2D" parent="PlayerArea2D/Body"]
unique_name_in_owner = true
position = Vector2(-1.5, -20.5)
sprite_frames = SubResource("SpriteFrames_jcrcq")
animation = &"Bite"
autoplay = "Idle"

[node name="PlayerBasis" type="Sprite2D" parent="PlayerArea2D/Body"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.278431)
position = Vector2(-1.03333, -11.9333)
scale = Vector2(0.701587, 1)
texture = ExtResource("9_xxyyo")

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="PlayerArea2D"]
unique_name_in_owner = true
position = Vector2(-122, -447)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pjv5u")

[node name="Timer" type="Timer" parent="PlayerArea2D"]
autostart = true

[node name="HurtSound" type="AudioStreamPlayer" parent="PlayerArea2D"]
stream = ExtResource("10_kr3yk")
bus = &"hurt"

[node name="BiteSound" type="AudioStreamPlayer" parent="PlayerArea2D"]
stream = ExtResource("11_vtfjj")
volume_db = -20.0
bus = &"SFX"

[connection signal="animation_finished" from="PlayerArea2D/Body" to="PlayerArea2D" method="_on_cat_animation_finished"]
[connection signal="timeout" from="PlayerArea2D/Timer" to="PlayerArea2D" method="_on_timer_timeout"]
